2005-01-14 Dario Massarin <nekkar@libero.it>
        * Correct stupid bug that caused wrong updates of the percent field 
        in the group object.

2005-01-13 Dario Massarin <nekkar@libero.it>
        * Reorganization of the directories. Some files have been renamed.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Fixed nasty bug in transferKio.cpp which produced a crash every time
        a download was aborted.
        * Now also the scheduler is a TransferInterrogator. This means that 
        I have removed the transferStatusChanged signal and now only the
        transferChanged signal is emitted from the transfer object :-)

2004-11-05 Dario Massarin <nekkar@libero.it>
        * New system tray icon effects. This has been realized looking at the 
        amarok code. In the future, when other things will be in place, I will
        surely paint an icon filled according to the current downloading progress.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Delayed initialization. This should speed up the application startup
        especially when the user has lots of transfers.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Cleanups all over the code.
        
        * interrogator.h: Now we have this new file that defines the two classes
        TransferInterrogator and GroupInterrogator. If a class wants to interrogate
        a transfer or a group object it should reimplement them.
        
        * group.{h,cpp}: The progressed size, totalSize and percent properties are
        not saved anymore to file. Now we update the group properties every time
        we see that a transfer that belongs to the group has changed. Each group 
        change is notified to all the views.        
        
        * mainview.cpp: fixed crash when executing actions on a group item.

2004-10-17 Dario Massarin <nekkar@libero.it>
    
        * transfer.{h,cpp}: New class TransferInterrogator that abstracts the